add translate to header/ hero/ about us / sample sections

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -3,6 +3,25 @@
   "lang_url": "",
   "title": "Ru",
   "header": {
-    "about_us": "О нас"
+    "about_us": "О нас",
+    "purchase": "Недвижимость",
+    "commerce": "Готовый бизнес",
+    "request": "Оставить заявку"
+  },
+  "hero": {
+    "title": "Агентство недвижимости Goldtown",
+    "text": "Поможем Вам продать/купить квартиру в новострое выгодно и быстро",
+    "button_text": "Оставить заявку"
+  },
+  "about_us": {
+    "title": "О нас",
+    "description": "Привет! Мы агенство недвижимости Gold Town Лидер по продажам недвижимости в Петропавловской и Софийской Борщаговке, с.Святопетровское. Работаем по Киевской области и г. Киев. Досконально знаем своё дело что бы Вам было: легко, удобно, надёжно. С нами Вы сможете продать, купить, сдавать, арендовать квартиру, дом, таунхаус, дуплекс, коммерческую недвижимость или земельный участок. Мы работаем открыто и честно, с максимальной отдачей на результат."
+  },
+  "sample": {
+    "house": "Квартиры",
+    "commerce": "Комерция",
+    "parking": "Паркоместа",
+    "storage": "Кладовки",
+    "stead": "Земельные участки"
   }
 }
