gtm scripts + langs

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -23,5 +23,18 @@
     "parking": "Паркоместа",
     "storage": "Кладовки",
     "stead": "Земельные участки"
+  },
+  "request": {
+    "title": "Оставте заявку и наш <br/> менеджер свяжиться з Вами!",
+    "name": "Ваше имя",
+    "number": "Номер телефона",
+    "send": "Отправить",
+    "error": "Телефон должен содержать от 9 до 13 цифр",
+    "img_alt": "Оставить заявку"
+  },
+  "success_popup": {
+    "title": "Спасибо!",
+    "subtitle": "Ваши данные успешно отправлены",
+    "text": "Ближайшее время наши менеджеры свяжутся з Вами!"
   }
 }
