--- a/lang/ua.json
+++ b/lang/ua.json
@@ -23,5 +23,21 @@
     "parking": "Паркомісця",
     "storage": "Комори",
     "stead": "Земельнi дiлянки"
+  },
+  "request": {
+    "title": "Залишіть заявку і наш <br/> менеджер зв'яжеться з Вами!",
+    "name": "Ваше ім'я",
+    "number": "Номер телефону",
+    "send": "Відправити",
+    "error": "Телефон має містити від 9 до 13 цифр",
+    "img_alt": "Залишити заявку"
+  },
+  "success_popup": {
+    "title": "Дякуємо!",
+    "subtitle": "Ваші дані успішно відправлені",
+    "text": "Найближчим часом наші менеджери зв'яжуться з Вами!"
+  },
+  "card": {
+    "payback": "роки окупність"
   }
 }
