--- a/lang/ru.json
+++ b/lang/ru.json
@@ -36,5 +36,19 @@
     "title": "Спасибо!",
     "subtitle": "Ваши данные успешно отправлены",
     "text": "Ближайшее время наши менеджеры свяжутся з Вами!"
+  },
+  "card": {
+    "payback": "год окупаемости",
+    "number_of_rooms": "Количество комнат",
+    "floor": "Этаж",
+    "apartment_area": "Площадь",
+    "living_area": "Жилая площадь",
+    "parking_type": "Тип паркоместа",
+    "annual_income": "Годовой доход",
+    "more": "Детальнее"
+  },
+  "main": {
+    "filters": "Фильтры",
+    "no_options": "Варианты отсутствуют"
   }
 }
