--- a/lang/ua.json
+++ b/lang/ua.json
@@ -38,6 +38,17 @@
     "text": "Найближчим часом наші менеджери зв'яжуться з Вами!"
   },
   "card": {
-    "payback": "роки окупність"
+    "payback": "роки окупність",
+    "number_of_rooms": "Кількість кімнат",
+    "floor": "Поверх",
+    "apartment_area": "Площа",
+    "living_area": "Житлова площа",
+    "parking_type": "Тип паркомісця",
+    "annual_income": "Річний дохід",
+    "more": "Детальнішe"
+  },
+  "main": {
+    "filters": "Фiльтри",
+    "no_options": "Варіанти відсутні"
   }
 }
