meta to slug pages commerce and purchese

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -62,5 +62,69 @@
     "payback": "Окупаемость (лет)",
     "income": "Годовой доход",
     "to_apply": "Применить"
+  },
+  "index_meta": {
+    "title": "Продаж нерухомості у Києві та передмісті (Первинний ринок) - GOLDTOWN",
+    "description": "Нерухомість від забудовників. Купуй квартиру, складське приміщення, паркомісце для себе або бізнесу. Продаж нерухомості без посередників",
+    "h1": "Продаж нерухомості від забудовників "
+  },
+  "purchase_slug_meta": {
+    "all": {
+      "title": "Купити нерухомість у Києві та передмісті (Первинний ринок)  - GOLDTOWN",
+      "description": "Продаж квартир, складів, паркомісць, складських приміщень, земельних ділянок від забудовника, без посередників.",
+      "h1": "Продаж  нерухомості у Києві та передмісті на первічному ринке"
+    },
+    "house": {
+      "title": "Купити квартиру у Києві чи передмісті від забудовника - GOLDTOWN",
+      "description": "GOLDTOWN допоможе Вам купити квартиру на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!",
+      "h1": "Продаж квартир у Києві та передмісті на первічному ринке"
+    },
+    "storage": {
+      "title": "Куплю комору у Києві чи передмісті на первічному ринке - GOLDTOWN",
+      "description": "GOLDTOWN допоможе вам с з придбанням комори у новобудові. Швидке оформлення документів, первинний ринок.",
+      "h1": "Продаж комор у Києві та передмісті"
+    },
+    "parking": {
+      "title": "Купити паркомісце у Києві та передмісті без посередників - GOLDTOWN",
+      "description": "GOLDTOWN допоможе вам купити паркомісце без посередників, без зайвої комісії та зі швидким оформленням документів",
+      "h1": "Продаж паркомісць у Києві та передмісті"
+    },
+    "stead": {
+      "title": "Купити комору у Києві чи передмісті на первічному ринке - GOLDTOWN",
+      "description": "GOLDTOWN допоможе вам с з придбанням земельної ділянки без посередників. Швидке оформлення документів, первинний ринок, відсутність додаткових комісій ",
+      "h1": "Продаж земельних ділянок у Києві та передмісті - без посередників"
+    }
+  },
+  "commerce_slug_meta": {
+    "all": {
+      "title": "Купити комерційну нерухомість у Києві та передмісті - GOLDTOWN",
+      "description": "GOLDTOWN допоможе вам с з придбанням комерційної нерухомості без посередників. Швидке оформлення документів, первинний ринок, відсутність додаткових комісій ",
+      "h1": "Продаж комерційної нерухомості у Києві та передмісті"
+    },
+    "house": {
+      "title": "",
+      "description": "",
+      "h1": ""
+    },
+    "storage": {
+      "title": "Продаж комерційних комор у Києві та передмісті - GOLDTOWN",
+      "description": "GOLDTOWN допоможе вам с з придбанням комори під комерційні цілі у новобудові. Швидке оформлення документів, первинний ринок.",
+      "h1": "Продаж комерційних комор у Києві та передмісті - GOLDTOWN"
+    },
+    "parking": {
+      "title": "Купити комерційне паркомісце у Києві та передмісті без посередників - GOLDTOWN",
+      "description": "GOLDTOWN допоможе вам купити комерційне паркомісце без посередників, без зайвих комісії та зі швидким оформленням документів",
+      "h1": "Продаж комерційних паркомісць у Києві та передмісті"
+    },
+    "stead": {
+      "title": "Купити комерційну земельну ділянку у Києві та передмісті - без посередників - GOLDTOWN",
+      "description": "GOLDTOWN допоможе вам с з придбанням комерційних земельної ділянки без посередників. Швидке оформлення документів, первинний ринок, відсутність додаткових комісій ",
+      "h1": "Продаж комерційних земельних ділянок у Києві та передмісті - без посередників"
+    },
+    "commercial-premises": {
+      "title": "Купити комерційне приміщення у Києві та передмісті - GOLDTOWN",
+      "description": "GOLDTOWN допоможе вам с з придбанням комерційних приміщень без посередників. Швидке оформлення документів, первинний ринок, відсутність додаткових комісій ",
+      "h1": "Продаж комерційних приміщень у Києві та перемісті"
+    }
   }
 }
