upd filters + lang

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -38,7 +38,7 @@
     "text": "Ближайшее время наши менеджеры свяжутся з Вами!"
   },
   "card": {
-    "payback": "год окупаемости",
+    "payback": "лет окупаемости",
     "number_of_rooms": "Количество комнат",
     "floor": "Этаж",
     "apartment_area": "Площадь",
@@ -126,5 +126,21 @@
       "description": "GOLDTOWN допоможе вам с з придбанням комерційних приміщень без посередників. Швидке оформлення документів, первинний ринок, відсутність додаткових комісій ",
       "h1": "Продаж комерційних приміщень у Києві та перемісті"
     }
+  },
+  "filtersSelect": {
+    "number_of_rooms": "Количество комнат:",
+    "payback": "Окупаемость:",
+    "annual_income": "Годовой доход:",
+    "Residential_quarter": "ЖК:",
+    "type_of_house": "Тип квартиры:",
+    "kyiv_or_region": "Киев или регионЖ",
+    "district": "Район:",
+    "Instalment": "Рассрочка"
+  },
+  "month": "месяцев",
+  "contacts": {
+    "address": "08141, Киевская обл. <br/> Бучанский р-н. с. Святопетровское, <br/> ул. Богдана Хмельницкого 1Б.",
+    "contacts": "Контакты",
+    "weekend": "выходной"
   }
 }
