--- a/lang/ua.json
+++ b/lang/ua.json
@@ -38,7 +38,7 @@
     "text": "Найближчим часом наші менеджери зв'яжуться з Вами!"
   },
   "card": {
-    "payback": "роки окупність",
+    "payback": "років окупність",
     "number_of_rooms": "Кількість кімнат",
     "floor": "Поверх",
     "apartment_area": "Площа",
@@ -126,5 +126,21 @@
       "description": "GOLDTOWN допоможе вам с з придбанням комерційних приміщень без посередників. Швидке оформлення документів, первинний ринок, відсутність додаткових комісій ",
       "h1": "Продаж комерційних приміщень у Києві та перемісті"
     }
+  },
+  "filtersSelect": {
+    "number_of_rooms": "Кількість кімнат:",
+    "payback": "Окупність:",
+    "annual_income": "Річний дохід:",
+    "Residential_quarter": "ЖК:",
+    "type_of_house": "Тип квартири:",
+    "kyiv_or_region": "Київ чи регіон:",
+    "district": "Район:",
+    "Instalment": "Розсрочка"
+  },
+  "month": "місяців",
+  "contacts": {
+    "address": "08141, Київська обл. <br/> Бучанский р-н. с. Святопетрівське, <br/> вул. Богдана Хмельницького 1Б.",
+    "contacts": "Контакти",
+    "weekend": "вихідний"
   }
 }
