--- a/lang/ua.json
+++ b/lang/ua.json
@@ -93,6 +93,26 @@
       "title": "Купити комору у Києві чи передмісті на первічному ринке - GOLDTOWN",
       "description": "GOLDTOWN допоможе вам с з придбанням земельної ділянки без посередників. Швидке оформлення документів, первинний ринок, відсутність додаткових комісій ",
       "h1": "Продаж земельних ділянок у Києві та передмісті - без посередників"
+    },
+    "1-k-apartment": {
+      "title": "Купити 1 кімнатну квартиру у Києві чи передмісті у розстрочку від забудовника - GOLDTOWN",
+      "description": "GOLDTOWN допоможе Вам купити однокімнатну квартиру у розстрочку на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
+    },
+    "2-k-apartment": {
+      "title": "Купити 2 кімнатну квартиру у Києві чи передмісті у розстрочку від забудовника - GOLDTOWN",
+      "description": "GOLDTOWN допоможе Вам купити двокімнатну квартиру у розстрочку на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
+    },
+    "townhouse": {
+      "title": "Купити таунхаус у Києві чи передпісті від забудовника - GOLDTOWN ",
+      "description": "GOLDTOWN допоможе Вам купити таунхаус (Townhouse) на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
+    },
+    "apartment-with-pool": {
+      "title": "Купити квартиру с басейном у Києві чи передмісті від забудовника - GOLDTOWN",
+      "description": "GOLDTOWN допоможе Вам купити квартиру с басейном на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
+    },
+    "townhouse-with-pool": {
+      "title": "Купити таунхаус с басейном у Києві чи передпісті від забудовника - GOLDTOWN",
+      "description": "GOLDTOWN допоможе Вам купити таунхаус с басейном на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     }
   },
   "commerce_slug_meta": {
