--- a/lang/ru.json
+++ b/lang/ru.json
@@ -111,7 +111,7 @@
       "description": "GOLDTOWN допоможе Вам купити квартиру с басейном на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     },
     "townhouse-with-pool": {
-      "title": "Купити таунхаус с басейном у Києві чи передпісті від забудовника - GOLDTOWN",
+      "title": "Купити таунхаус с басейном у Києві чи передмісті від забудовника - GOLDTOWN",
       "description": "GOLDTOWN допоможе Вам купити таунхаус с басейном на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     }
   },
