--- a/lang/ru.json
+++ b/lang/ru.json
@@ -154,7 +154,7 @@
     "Residential_quarter": "ЖК:",
     "type_of_house": "Тип квартиры:",
     "kyiv_or_region": "Киев или регионЖ",
-    "district": "Район:",
+    "district": "Населенный пункт:",
     "Instalment": "Рассрочка"
   },
   "month": "месяцев",
