--- a/lang/ua.json
+++ b/lang/ua.json
@@ -111,7 +111,7 @@
       "description": "GOLDTOWN допоможе Вам купити квартиру с басейном на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     },
     "townhouse-with-pool": {
-      "title": "Купити таунхаус с басейном у Києві чи передпісті від забудовника - GOLDTOWN",
+      "title": "Купити таунхаус с басейном у Києві чи передмісті від забудовника - GOLDTOWN",
       "description": "GOLDTOWN допоможе Вам купити таунхаус с басейном на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     }
   },
@@ -154,7 +154,7 @@
     "Residential_quarter": "ЖК:",
     "type_of_house": "Тип квартири:",
     "kyiv_or_region": "Київ чи регіон:",
-    "district": "Район:",
+    "district": "Населений пункт:",
     "Instalment": "Розсрочка"
   },
   "month": "місяців",
