--- a/lang/ru.json
+++ b/lang/ru.json
@@ -94,23 +94,23 @@
       "description": "GOLDTOWN допоможе вам с з придбанням земельної ділянки без посередників. Швидке оформлення документів, первинний ринок, відсутність додаткових комісій ",
       "h1": "Продаж земельних ділянок у Києві та передмісті - без посередників"
     },
-    "1-k-apartment": {
+    "Number_of_rooms=1": {
       "title": "Купити 1 кімнатну квартиру у Києві чи передмісті у розстрочку від забудовника - GOLDTOWN",
       "description": "GOLDTOWN допоможе Вам купити однокімнатну квартиру у розстрочку на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     },
-    "2-k-apartment": {
+    "Number_of_rooms=2": {
       "title": "Купити 2 кімнатну квартиру у Києві чи передмісті у розстрочку від забудовника - GOLDTOWN",
       "description": "GOLDTOWN допоможе Вам купити двокімнатну квартиру у розстрочку на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     },
-    "townhouse": {
+    "Type_of_house=townhouse": {
       "title": "Купити таунхаус у Києві чи передпісті від забудовника - GOLDTOWN ",
       "description": "GOLDTOWN допоможе Вам купити таунхаус (Townhouse) на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     },
-    "apartment-with-pool": {
+    "Type_of_house=kvartira__pool": {
       "title": "Купити квартиру с басейном у Києві чи передмісті від забудовника - GOLDTOWN",
       "description": "GOLDTOWN допоможе Вам купити квартиру с басейном на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     },
-    "townhouse-with-pool": {
+    "Type_of_house=townhouse__pool": {
       "title": "Купити таунхаус с басейном у Києві чи передмісті від забудовника - GOLDTOWN",
       "description": "GOLDTOWN допоможе Вам купити таунхаус с басейном на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     }
@@ -141,7 +141,7 @@
       "description": "GOLDTOWN допоможе вам с з придбанням комерційних земельної ділянки без посередників. Швидке оформлення документів, первинний ринок, відсутність додаткових комісій ",
       "h1": "Продаж комерційних земельних ділянок у Києві та передмісті - без посередників"
     },
-    "commercial-premises": {
+    "commercial_premises": {
       "title": "Купити комерційне приміщення у Києві та передмісті - GOLDTOWN",
       "description": "GOLDTOWN допоможе вам с з придбанням комерційних приміщень без посередників. Швидке оформлення документів, первинний ринок, відсутність додаткових комісій ",
       "h1": "Продаж комерційних приміщень у Києві та перемісті"
