--- a/lang/ua.json
+++ b/lang/ua.json
@@ -94,11 +94,11 @@
       "description": "GOLDTOWN допоможе вам с з придбанням земельної ділянки без посередників. Швидке оформлення документів, первинний ринок, відсутність додаткових комісій ",
       "h1": "Продаж земельних ділянок у Києві та передмісті - без посередників"
     },
-    "Number_of_rooms=1": {
+    "number_of_rooms=1": {
       "title": "Купити 1 кімнатну квартиру у Києві чи передмісті у розстрочку від забудовника - GOLDTOWN",
       "description": "GOLDTOWN допоможе Вам купити однокімнатну квартиру у розстрочку на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     },
-    "Number_of_rooms=2": {
+    "number_of_rooms=2": {
       "title": "Купити 2 кімнатну квартиру у Києві чи передмісті у розстрочку від забудовника - GOLDTOWN",
       "description": "GOLDTOWN допоможе Вам купити двокімнатну квартиру у розстрочку на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     },
@@ -151,11 +151,11 @@
     "number_of_rooms": "Кількість кімнат:",
     "payback": "Окупність:",
     "annual_income": "Річний дохід:",
-    "Residential_quarter": "ЖК:",
+    "residential_quarter": "ЖК:",
     "type_of_house": "Тип дому:",
     "kyiv_or_region": "Київ чи регіон:",
     "district": "Населений пункт:",
-    "Instalment": "Розсрочка",
+    "instalment": "Розсрочка",
     "pool": "Басейн"
   },
   "month": "місяців",
