--- a/lang/ua.json
+++ b/lang/ua.json
@@ -102,15 +102,15 @@
       "title": "Купити 2 кімнатну квартиру у Києві чи передмісті у розстрочку від забудовника - GOLDTOWN",
       "description": "GOLDTOWN допоможе Вам купити двокімнатну квартиру у розстрочку на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     },
-    "Type_of_house=townhouse": {
+    "type_of_house=townhouse": {
       "title": "Купити таунхаус у Києві чи передпісті від забудовника - GOLDTOWN ",
       "description": "GOLDTOWN допоможе Вам купити таунхаус (Townhouse) на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     },
-    "Type_of_house=kvartira__pool": {
+    "type_of_house=kvartira__pool": {
       "title": "Купити квартиру с басейном у Києві чи передмісті від забудовника - GOLDTOWN",
       "description": "GOLDTOWN допоможе Вам купити квартиру с басейном на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     },
-    "Type_of_house=townhouse__pool": {
+    "type_of_house=townhouse__pool": {
       "title": "Купити таунхаус с басейном у Києві чи передмісті від забудовника - GOLDTOWN",
       "description": "GOLDTOWN допоможе Вам купити таунхаус с басейном на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     }
@@ -156,7 +156,8 @@
     "kyiv_or_region": "Київ чи регіон:",
     "district": "Населений пункт:",
     "instalment": "Розсрочка",
-    "pool": "Басейн"
+    "pool": "Басейн",
+    "clear_filter": "Очистити поле"
   },
   "month": "місяців",
   "contacts": {
