about us / gtnud upd

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -6,7 +6,9 @@
     "about_us": "О нас",
     "purchase": "Недвижимость",
     "commerce": "Готовый бизнес",
-    "request": "Оставить заявку"
+    "request": "Оставить заявку",
+    "bud": "Строительство",
+    "contacts": "Контакты"
   },
   "hero": {
     "title": "Агентство недвижимости Goldtown",
@@ -164,5 +166,10 @@
     "address": "08141, Киевская обл. <br/> Бучанский р-н. с. Святопетровское, <br/> ул. Богдана Хмельницкого 1Б.",
     "contacts": "Контакты",
     "weekend": "выходной"
+  },
+  "bud": {
+    "hero_subtitle": "Построим современный и комфортный дом под ключ",
+    "our_servises": "Наши услуги",
+    "projects_done": "Выполненные нами обьекты"
   }
 }
