--- a/lang/ua.json
+++ b/lang/ua.json
@@ -6,7 +6,9 @@
     "about_us": "Про нас",
     "purchase": "Нерухомість",
     "commerce": "Готовий бізнес",
-    "request": "Залишити заявку"
+    "request": "Залишити заявку",
+    "bud": "Будівництво",
+    "contacts": "Контакти"
   },
   "hero": {
     "title": "Агентство нерухомості Goldtown",
@@ -164,5 +166,10 @@
     "address": "08141, Київська обл. <br/> Бучанский р-н. с. Святопетрівське, <br/> вул. Богдана Хмельницького 1Б.",
     "contacts": "Контакти",
     "weekend": "вихідний"
+  },
+  "bud": {
+    "hero_subtitle": "Збудуємо сучасний і комфортний будинок під ключ",
+    "our_servises": "Наші послуги",
+    "projects_done": "Виконані нами об`єкти"
   }
 }
