--- a/lang/ru.json
+++ b/lang/ru.json
@@ -170,6 +170,7 @@
   "bud": {
     "hero_subtitle": "Построим современный и комфортный дом под ключ",
     "our_servises": "Наши услуги",
-    "projects_done": "Выполненные нами обьекты"
+    "projects_done": "Выполненные нами обьекты",
+    "why_us": "Почему мы"
   }
 }
