--- a/lang/ua.json
+++ b/lang/ua.json
@@ -170,6 +170,7 @@
   "bud": {
     "hero_subtitle": "Збудуємо сучасний і комфортний будинок під ключ",
     "our_servises": "Наші послуги",
-    "projects_done": "Виконані нами об`єкти"
+    "projects_done": "Виконані нами об`єкти",
+    "why_us": "Чому ми"
   }
 }
