--- a/lang/ua.json
+++ b/lang/ua.json
@@ -108,11 +108,11 @@
       "title": "Купити таунхаус у Києві чи передпісті від забудовника - GOLDTOWN ",
       "description": "GOLDTOWN допоможе Вам купити таунхаус (Townhouse) на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     },
-    "type_of_house=kvartira__pool": {
+    "type_of_house=kvartira&pool": {
       "title": "Купити квартиру с басейном у Києві чи передмісті від забудовника - GOLDTOWN",
       "description": "GOLDTOWN допоможе Вам купити квартиру с басейном на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     },
-    "type_of_house=townhouse__pool": {
+    "type_of_house=townhouse&pool": {
       "title": "Купити таунхаус с басейном у Києві чи передмісті від забудовника - GOLDTOWN",
       "description": "GOLDTOWN допоможе Вам купити таунхаус с басейном на первинному ринку у новобудові. Без посередників, швидке оформлення документів. Ваша квартира чекає на вас!"
     }
