--- a/lang/ru.json
+++ b/lang/ru.json
@@ -159,7 +159,8 @@
     "district": "Населенный пункт:",
     "instalment": "Рассрочка",
     "pool": "Бассейн",
-    "clear_filter": "Очистить поле"
+    "clear_filter": "Очистить поле",
+    "finished": "Готовые"
   },
   "month": "месяцев",
   "contacts": {
