--- a/lang/ua.json
+++ b/lang/ua.json
@@ -159,7 +159,8 @@
     "district": "Населений пункт:",
     "instalment": "Розсрочка",
     "pool": "Басейн",
-    "clear_filter": "Очистити поле"
+    "clear_filter": "Очистити поле",
+    "finished": "Готові"
   },
   "month": "місяців",
   "contacts": {
